--- a/notebooks/c0.ipynb
+++ b/notebooks/c0.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "from glob import glob\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
