create c5.ipynb and update reademe.md

--- a/notebooks/c0.ipynb
+++ b/notebooks/c0.ipynb
@@ -9,7 +9,9 @@
     "from glob import glob\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "from scipy import stats  \n",
+    "import matplotlib.pyplot as plt\n",
+    "import japanize_matplotlib"
    ]
   },
   {
@@ -19,8 +21,8 @@
    "outputs": [],
    "source": [
     "files = glob(\"../csv/例題_データアナリティクス基礎/*\")\n",
-    "# for i, f in enumerate(files):\n",
-    "#     print(i, f)\n"
+    "for i, f in enumerate(files):\n",
+    "    print(i, f)\n"
    ]
   },
   {
@@ -122,9 +124,10 @@
     }
    ],
    "source": [
-    "purchase_data = pd.read_excel(files[3])\n",
-    "purchase_data.columns = ['id', 'customer_id', 'price', 'food', 'weekday', 'gender']\n",
-    "purchase_data.head()"
+    "df = pd.read_excel(files[3])\n",
+    "print(df.columns)\n",
+    "df.columns = ['id', 'customer_id', 'price', 'food', 'weekday', 'gender']\n",
+    "df.head()"
    ]
   }
  ],
