create c10.ipynb and update readme.md

--- a/notebooks/c0.ipynb
+++ b/notebooks/c0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ../csv/例題_データアナリティクス基礎\\例題10_自由記述データ&形態素解析データ.xlsx\n",
+      "1 ../csv/例題_データアナリティクス基礎\\例題11_乱数で発生させた分布の基本統計量.xlsx\n",
+      "2 ../csv/例題_データアナリティクス基礎\\例題1_自転車データ.xlsx\n",
+      "3 ../csv/例題_データアナリティクス基礎\\例題2_顧客ID付き食品購入データ.xlsx\n",
+      "4 ../csv/例題_データアナリティクス基礎\\例題3_テレビ視聴アンケートデータ.xlsx\n",
+      "5 ../csv/例題_データアナリティクス基礎\\例題4_5つの地域の事業所数.xlsx\n",
+      "6 ../csv/例題_データアナリティクス基礎\\例題5_関東地方の人口データ.xlsx\n",
+      "7 ../csv/例題_データアナリティクス基礎\\例題7_異なる授業形態による成績データ.xlsx\n",
+      "8 ../csv/例題_データアナリティクス基礎\\例題8_遊園地テーマパーク入場者数.xlsx\n",
+      "9 ../csv/例題_データアナリティクス基礎\\例題9_店舗別販売額.xlsx\n"
+     ]
+    }
+   ],
    "source": [
     "files = glob(\"../csv/例題_データアナリティクス基礎/*\")\n",
     "for i, f in enumerate(files):\n",
@@ -30,6 +47,13 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['データ番号', '顧客番号', '購入金額　(円）', '食品種類', '曜日', '性別'], dtype='object')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
