--- a/notebooks/e6.ipynb
+++ b/notebooks/e6.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "4   5      16     18"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,6 +151,376 @@
    "metadata": {},
    "source": [
     "母平均の推定値"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>before</th>\n",
+       "      <th>after</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>12.578947</td>\n",
+       "      <td>14.105263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.627314</td>\n",
+       "      <td>2.433922</td>\n",
+       "      <td>2.806634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.500000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>14.500000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              id     before      after\n",
+       "count  19.000000  19.000000  19.000000\n",
+       "mean   10.000000  12.578947  14.105263\n",
+       "std     5.627314   2.433922   2.806634\n",
+       "min     1.000000   8.000000   7.000000\n",
+       "25%     5.500000  11.000000  13.000000\n",
+       "50%    10.000000  13.000000  14.000000\n",
+       "75%    14.500000  14.000000  16.000000\n",
+       "max    19.000000  16.000000  18.000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "授業前の母平均推定値: 12.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'授業前の母平均推定値: {df.describe().iloc[1, 1]:.01f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "授業前の母平均の標本誤差"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "標本平均の標準誤差: 0.56\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'標本平均の標準誤差: {(df[\"before\"].std() / np.sqrt(df.shape[0])):.02f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "授業前の母平均のt分布に基づく信頼度95%の信頼上限"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11.4 13.8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "n = df.shape[0]\n",
+    "mean_before = df['before'].mean()\n",
+    "t = stats.t.ppf(1-alpha/2, n)\n",
+    "std_before = df['before'].std() / np.sqrt(n)\n",
+    "# print(mean_before, t, std_before)\n",
+    "upper_limit = round(mean_before + t * std_before, 2)\n",
+    "lower_limit = round(mean_before - t * std_before, 2)\n",
+    "print(f'[{lower_limit:.01f}', f'{upper_limit:.01f}]')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "授業前後について仮説検定を行う"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>before</th>\n",
+       "      <th>after</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>12.578947</td>\n",
+       "      <td>14.105263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.627314</td>\n",
+       "      <td>2.433922</td>\n",
+       "      <td>2.806634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.500000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>14.500000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              id     before      after\n",
+       "count  19.000000  19.000000  19.000000\n",
+       "mean   10.000000  12.578947  14.105263\n",
+       "std     5.627314   2.433922   2.806634\n",
+       "min     1.000000   8.000000   7.000000\n",
+       "25%     5.500000  11.000000  13.000000\n",
+       "50%    10.000000  13.000000  14.000000\n",
+       "75%    14.500000  14.000000  16.000000\n",
+       "max    19.000000  16.000000  18.000000"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_date = df.describe()\n",
+    "stats_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = stats_date.loc['count', 'id']\n",
+    "m_before = stats_date.loc['mean', 'before']\n",
+    "m_after = stats_date.loc['mean', 'after']\n",
+    "std_before = stats_date.loc['std', 'before']\n",
+    "std_after = stats_date.loc['std', 'after']\n",
+    "std_error_before = std_before / n\n",
+    "std_error_before = std_after / n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.8449389927846943"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_ba = (df['before'] - df['after']).mean()\n",
+    "std_ba = (df['before'] - df['after']).std()\n",
+    "mean_ba / std_ba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TtestResult(statistic=-1.7908666588639437, pvalue=0.0408632471012336, df=36.0),\n",
+       " TtestResult(statistic=-1.7908666588639437, pvalue=0.9591367528987664, df=36.0))"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(df['before'], df['after'], equal_var=True, alternative='less'), stats.ttest_ind(df['before'], df['after'], equal_var=True, alternative='greater')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TtestResult(statistic=-1.7908666588639437, pvalue=0.0817264942024672, df=36.0),\n",
+       " TtestResult(statistic=-1.7908666588639437, pvalue=0.08189515224197876, df=35.29309879890642))"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(df['before'], df['after'], equal_var=True, alternative='two-sided'), stats.ttest_ind(df['before'], df['after'], equal_var=False, alternative='two-sided'), "
    ]
   }
  ],
