update e7, e8.ipynb, readme.md

--- a/notebooks/e6.ipynb
+++ b/notebooks/e6.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "max    19.000000  16.000000  18.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -335,12 +335,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "授業前後について仮説検定を行う"
+    "授業前後について一対の標本による平均の検定（対応のある2標本t検定）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "max    19.000000  16.000000  18.000000"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,82 +445,65 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 69,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "n = stats_date.loc['count', 'id']\n",
-    "m_before = stats_date.loc['mean', 'before']\n",
-    "m_after = stats_date.loc['mean', 'after']\n",
-    "std_before = stats_date.loc['std', 'before']\n",
-    "std_after = stats_date.loc['std', 'after']\n",
-    "std_error_before = std_before / n\n",
-    "std_error_before = std_after / n"
+    "対応のある2標本のt検定\n",
+    "- $H_0: \\mu_1 = \\mu_2 $ \n",
+    "- $H_1: \\mu_1 \\neq \\mu_2 $\n",
+    "\n",
+    "以下の二つの方法を示す"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.8449389927846943"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_value: -3.683, p_value: 0.0017\n"
+     ]
     }
    ],
    "source": [
-    "mean_ba = (df['before'] - df['after']).mean()\n",
-    "std_ba = (df['before'] - df['after']).std()\n",
-    "mean_ba / std_ba"
+    "# Calculate the T-test for the mean of ONE group of scores.\n",
+    "result1 = stats.ttest_1samp(df['before'] - df['after'], popmean=0)\n",
+    "print(f't_value: {result1[0]:.03f}, p_value: {result1[1]:.04f}')\n",
+    "\n",
+    "# Calculates the T-test on TWO RELATED samples of scores, a and b.\n",
+    "result2 = stats.ttest_rel(df['before'], df['after'], alternative='two-sided')\n",
+    "print(f't_value: {result2[0]:.03f}, p_value: {result2[1]:.04f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "手計算による検算"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(TtestResult(statistic=-1.7908666588639437, pvalue=0.0408632471012336, df=36.0),\n",
-       " TtestResult(statistic=-1.7908666588639437, pvalue=0.9591367528987664, df=36.0))"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_value: -3.683\n"
+     ]
     }
    ],
    "source": [
-    "stats.ttest_ind(df['before'], df['after'], equal_var=True, alternative='less'), stats.ttest_ind(df['before'], df['after'], equal_var=True, alternative='greater')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(TtestResult(statistic=-1.7908666588639437, pvalue=0.0817264942024672, df=36.0),\n",
-       " TtestResult(statistic=-1.7908666588639437, pvalue=0.08189515224197876, df=35.29309879890642))"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats.ttest_ind(df['before'], df['after'], equal_var=True, alternative='two-sided'), stats.ttest_ind(df['before'], df['after'], equal_var=False, alternative='two-sided'), "
+    "n = df.shape[0]\n",
+    "ab = df['before'] - df['after']\n",
+    "sample_std_ab = ab.std() / np.sqrt(n)\n",
+    "t_value = (ab.mean() - 0) / sample_std_ab\n",
+    "print(f't_value: {t_value:.03f}')"
    ]
   }
  ],
