--- a/notebooks/s0.ipynb
+++ b/notebooks/s0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,32 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 ../csv/模擬問題_データアナリティクス基礎\\模擬問題問題1_8月売上データ.xlsx\n",
-      "1 ../csv/模擬問題_データアナリティクス基礎\\模擬問題問題2_中華まんとお茶の嗜好調査.xlsx\n",
-      "2 ../csv/模擬問題_データアナリティクス基礎\\模擬問題問題3_コピー機のトナー交換日数.xlsx\n",
-      "3 ../csv/模擬問題_データアナリティクス基礎\\模擬問題問題4_ゲームキャラクターのステータス.xlsx\n",
-      "4 ../csv/模擬問題_データアナリティクス基礎\\模擬問題問題6_基礎知識テストのデータ.xlsx\n",
-      "5 ../csv/模擬問題_データアナリティクス基礎\\模擬問題問題7_3店舗の月別売上高.xlsx\n",
-      "6 ../csv/模擬問題_データアナリティクス基礎\\模擬問題問題8_自由記述データ＆形態素解析データ.xlsx\n"
+      "0 ../csv/データアナリティクス基礎/模擬問題_データアナリティクス基礎\\模擬問題問題1_8月売上データ.xlsx\n",
+      "1 ../csv/データアナリティクス基礎/模擬問題_データアナリティクス基礎\\模擬問題問題2_中華まんとお茶の嗜好調査.xlsx\n",
+      "2 ../csv/データアナリティクス基礎/模擬問題_データアナリティクス基礎\\模擬問題問題3_コピー機のトナー交換日数.xlsx\n",
+      "3 ../csv/データアナリティクス基礎/模擬問題_データアナリティクス基礎\\模擬問題問題4_ゲームキャラクターのステータス.xlsx\n",
+      "4 ../csv/データアナリティクス基礎/模擬問題_データアナリティクス基礎\\模擬問題問題6_基礎知識テストのデータ.xlsx\n",
+      "5 ../csv/データアナリティクス基礎/模擬問題_データアナリティクス基礎\\模擬問題問題7_3店舗の月別売上高.xlsx\n",
+      "6 ../csv/データアナリティクス基礎/模擬問題_データアナリティクス基礎\\模擬問題問題8_自由記述データ＆形態素解析データ.xlsx\n"
      ]
     }
    ],
    "source": [
-    "files = glob(\"../csv/模擬問題_データアナリティクス基礎/*\")\n",
+    "files = glob(\"../csv/データアナリティクス基礎/模擬問題_データアナリティクス基礎/*\")\n",
     "for i, f in enumerate(files):\n",
     "    print(i, f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "4   5  営業１課  T.N.    レストラン   529894"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "コンビニ       224    393971"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "営業３課      6976182  17919682  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,111 +542,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>industry</th>\n",
-       "      <th>コンビニ</th>\n",
-       "      <th>スーパー</th>\n",
-       "      <th>ミニスーパー</th>\n",
-       "      <th>レストラン</th>\n",
-       "      <th>百貨店</th>\n",
-       "      <th>給食業</th>\n",
-       "      <th>食堂業</th>\n",
-       "      <th>食料品卸業</th>\n",
-       "      <th>食料品店</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dept</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>営業１課</th>\n",
-       "      <td>0.793138</td>\n",
-       "      <td>0.662617</td>\n",
-       "      <td>0.486627</td>\n",
-       "      <td>0.131421</td>\n",
-       "      <td>0.172431</td>\n",
-       "      <td>0.550367</td>\n",
-       "      <td>0.173705</td>\n",
-       "      <td>0.089976</td>\n",
-       "      <td>0.336956</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>営業２課</th>\n",
-       "      <td>0.080157</td>\n",
-       "      <td>0.225198</td>\n",
-       "      <td>0.270734</td>\n",
-       "      <td>0.699558</td>\n",
-       "      <td>0.430299</td>\n",
-       "      <td>0.155951</td>\n",
-       "      <td>0.778787</td>\n",
-       "      <td>0.113893</td>\n",
-       "      <td>0.291831</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>営業３課</th>\n",
-       "      <td>0.126704</td>\n",
-       "      <td>0.112185</td>\n",
-       "      <td>0.242639</td>\n",
-       "      <td>0.169022</td>\n",
-       "      <td>0.397270</td>\n",
-       "      <td>0.293683</td>\n",
-       "      <td>0.047508</td>\n",
-       "      <td>0.796131</td>\n",
-       "      <td>0.371213</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "industry      コンビニ      スーパー    ミニスーパー     レストラン       百貨店       給食業  \\\n",
-       "dept                                                                   \n",
-       "営業１課      0.793138  0.662617  0.486627  0.131421  0.172431  0.550367   \n",
-       "営業２課      0.080157  0.225198  0.270734  0.699558  0.430299  0.155951   \n",
-       "営業３課      0.126704  0.112185  0.242639  0.169022  0.397270  0.293683   \n",
-       "\n",
-       "industry       食堂業     食料品卸業      食料品店  \n",
-       "dept                                    \n",
-       "営業１課      0.173705  0.089976  0.336956  \n",
-       "営業２課      0.778787  0.113893  0.291831  \n",
-       "営業３課      0.047508  0.796131  0.371213  "
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'total'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'total'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m df_spec \u001b[38;5;241m=\u001b[39m df_cross\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdf_spec\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtotal\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m      3\u001b[0m df_spec_column \u001b[38;5;241m=\u001b[39m df_spec \u001b[38;5;241m/\u001b[39m df_spec\u001b[38;5;241m.\u001b[39msum()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# print(df_spec_column.sum())\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'total'"
+     ]
     }
    ],
    "source": [
@@ -666,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
